[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/MainMenu/ButtonMainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/MainMenu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Tile/Back/BackWood.png" type="Texture" id=3]
[ext_resource path="res://UI/Styles/MenuTheme.tres" type="Theme" id=4]
[ext_resource path="res://Font/PressStart2P/PressStart2PTitle.tres" type="DynamicFont" id=5]
[ext_resource path="res://Font/PressStart2P/PressStart2Tiny.tres" type="DynamicFont" id=6]
[ext_resource path="res://Font/PressStart2P/PressStart2PSmall.tres" type="DynamicFont" id=7]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="CanvasLayer" parent="."]
layer = -128

[node name="ColorRect" type="ColorRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CenterContainer"]
margin_left = 370.0
margin_top = 60.0
margin_right = 910.0
margin_bottom = 660.0
rect_min_size = Vector2( 540, 600 )
theme = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = -32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRectStart" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_right = 476.0
margin_bottom = 59.0
size_flags_vertical = 3

[node name="Title" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 63.0
margin_right = 476.0
margin_bottom = 111.0
custom_fonts/font = ExtResource( 5 )
text = "CircleRC"
align = 1
autowrap = true

[node name="ReferenceRect" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 115.0
margin_right = 476.0
margin_bottom = 139.0
rect_min_size = Vector2( 0, 24 )

[node name="Or" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 143.0
margin_right = 476.0
margin_bottom = 159.0
custom_fonts/font = ExtResource( 6 )
text = "or"
align = 1
autowrap = true

[node name="ReferenceRect2" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 163.0
margin_right = 476.0
margin_bottom = 179.0
rect_min_size = Vector2( 0, 16 )

[node name="Subtitle" type="Label" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 183.0
margin_right = 476.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 7 )
text = "@#$~!! I broke my controller and now I can't drive straight"
align = 1
autowrap = true

[node name="ReferenceRect3" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 292.0
margin_right = 476.0
margin_bottom = 324.0
rect_min_size = Vector2( 0, 32 )

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 328.0
margin_right = 476.0
margin_bottom = 360.0
rect_min_size = Vector2( 0, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
margin_right = 186.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonPlay" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_left = 190.0
margin_right = 286.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 0 )
size_flags_vertical = 3
text = "Play"

[node name="ReferenceRect2" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 290.0
margin_right = 476.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ReferenceRect4" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 364.0
margin_right = 476.0
margin_bottom = 380.0
rect_min_size = Vector2( 0, 16 )

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 384.0
margin_right = 476.0
margin_bottom = 416.0
rect_min_size = Vector2( 0, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer2"]
margin_right = 186.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonLevelSelect" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer2" instance=ExtResource( 1 )]
margin_left = 190.0
margin_right = 286.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 0 )
size_flags_vertical = 3
text = "Level Select"

[node name="ReferenceRect2" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer2"]
margin_left = 290.0
margin_right = 476.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ReferenceRect5" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 420.0
margin_right = 476.0
margin_bottom = 436.0
rect_min_size = Vector2( 0, 16 )

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 440.0
margin_right = 476.0
margin_bottom = 472.0
rect_min_size = Vector2( 0, 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer3"]
margin_right = 186.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonQuit" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer3" instance=ExtResource( 1 )]
margin_left = 190.0
margin_right = 286.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 0 )
size_flags_vertical = 3
text = "Quit"

[node name="ReferenceRect2" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer/HBoxContainer3"]
margin_left = 290.0
margin_right = 476.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ReferenceRectEnd" type="ReferenceRect" parent="CenterContainer/Panel/VBoxContainer"]
margin_top = 476.0
margin_right = 476.0
margin_bottom = 536.0
size_flags_vertical = 3
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer2/ButtonLevelSelect" to="." method="_on_ButtonLevelSelect_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/VBoxContainer/HBoxContainer3/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
